# dejacode

./: .dockerignore  .env.demo  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CSP_VERIFICATION_GUIDE.md  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.rst  RELEASE.md  add_nonces_to_templates.py  api_auth-pyproject.toml  build_deb_docker.py  build_nix_docker.py  build_rpm_docker.py  compose.build.yml  compose.demo.yml  compose.dev.yml  compose.prod.yml  compose.yml  default.nix  dejacode_export.xlsx  docker-compose.codespaces.yml  docker-compose.demo.yml  docker-compose.yml  docker.env  export_xlsx.py  install.sh  manage.py  pyproject.toml  setup.cfg  setup.py  signed-off-by hemant hemant_189@outlook.com
.devcontainer/: devcontainer.json
.devcontainer/demo/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  dejacode-documentation.md  dejacode-enhancement-request.md  roadmap-item-template.md
.github/workflows/: check-code-and-docs-validation.yml  ci-docker.yml  ci.yml  create-github-release.yml  find-vulnerabilities.yml  gh-release.yml  pr-quality.yml  publish-docker-image.yml  publish-docker.yml  publish-pypi-release-aboutcode-api-auth.yml  run-unit-tests-docker.yml  run-unit-tests.yml
aboutcode/api_auth/: README.md  RELEASE.md  __init__.py  auth.py  models.py  views.py
aboutcode/notification/: __init__.py  models.py
component_catalog/: admin.py  api.py  apps.py  filters.py  forms.py  fuzzy.py  importers.py  inlines.py  license_expression_dje.py  models.py  programming_languages.py  urls.py  views.py  vulnerabilities.py  widgets.py
component_catalog/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_license_fields.py  0005_remove_component_concluded_license_and_more.py  0006_vulnerability.py  0006_vulnerability_model_and_missing_indexes.py  0007_alter_vulnerability_vulnerability_id.py  0007_vulnerability_affected_components_and_more.py  0007_vulnerability_fixed_packages.py  0007_vulnerability_fixed_packages_count_and_more.py  0007_vulnerability_fixed_packages_length.py  0007_vulnerability_fixed_packages_length_and_more.py  0008_remove_package_affected_by_vulnerabilities_and_more.py  0008_remove_vulnerability_created_by_and_more.py  0008_vulnerability_priority.py  0009_componentaffectedbyvulnerability_and_more.py  0009_vulnerability_highest_score_and_more.py  0010_component_risk_score_package_risk_score.py  0011_alter_component_owner.py  0011_to_delete_temp_fake_values.py  0012_alter_component_children.py  0012_alter_component_risk_score_alter_package_risk_score.py  0012_package_package_content.py  0013_alter_component_risk_score_alter_package_risk_score.py  0013_package_package_content.py
component_catalog/tests/: __init__.py  test_admin.py  test_api.py  test_command.py  test_copy.py  test_filters.py  test_importers.py  test_license_expression_dje.py  test_models.py  test_scancodeio.py  test_urn.py  test_views.py  test_vulnerabilities.py
data/postgresql/: README.md  initdb.sql.gz.ABOUT
dejacode/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
dejacode/localization/: README
dejacode/static/: README.rst
dejacode_toolkit/: HEADER  __init__.py  download.py  ldap.py  purldb.py  scancodeio.py  spdx-schema-2.3.json.ABOUT  spdx.py  utils.py  vex.py  vulnerablecode.py
dejacode_toolkit/csaf/: README.md  __init__.py
dejacode_toolkit/openvex/: README.md  __init__.py  openvex_json_schema_0.2.0.json.ABOUT
dejacode_toolkit/tests/: test_spdx.py  test_vex.py  test_vulnerablecode.py
django_altcha/: __init__.py
django_altcha/templates/: altcha_widget.html
dje/: admin.py  altcha.py  api.py  api_auth.py  api_custom.py  api_permissions.py  apps.py  client_data.py  context_processors.py  copier.py  cron_jobs.py  dashboard.py  decorators.py  fields.py  filters.py  forms.py  forms.py.ABOUT  importers.py  ldap_backend.py  list_display.py  mass_update.py  mass_update.py.ABOUT  mass_update.py.NOTICE  middleware.py  models.py  notification.py  outputs.py  permissions.py  registration.py  search.py  tasks.py  two_factor.py  urn.py  urn_resolver.py  utils.py  validators.py  views.py  views_formset.py  widgets.py
dje/management/: __init__.py
dje/migrations/: 0001_initial.py  0002_initial.py  0003_alter_dejacodeuser_homepage_layout.py  0004_dataspace_vulnerabilities_updated_at.py  0006_dejacodeuser_vulnerability_impact_notifications.py  (+10 more)
docs/: application-settings.rst  conf.py  contributing.rst  dataspace.rst  doc_maintenance.rst  faq.rst  howto-1.rst  howto-2.rst  howto-3.rst  howto-4-product-vulnerability-analysis.rst  howto-4.rst  howto-5-product-object-permissions.rst  index.rst  installation.rst  integrations-forgejo.rst  integrations-github.rst  integrations-gitlab.rst  integrations-introduction.rst  integrations-jira.rst  integrations-rest-api.rst  integrations-sourcehut.rst  integrations-webhook.rst  quickstart-guide.rst  reference-1.rst  reference-2.rst  reference-3-cravex.rst  reference-data-models.rst  reference-vulnerability-management.rst  tutorial-1.rst  tutorial-2.rst  tutorial-3.rst  tutorial-4-vulnerabilities.rst  tutorial-5-sboms.rst  tutorial-6-vuln-report.rst
license_library/: admin.py  api.py  apps.py  filters.py  forms.py  languages.py  models.py  urls.py  views.py
notification/: admin.py  apps.py  models.py  tasks.py
organization/: admin.py  api.py  apps.py  filters.py  forms.py  importers.py  models.py  urls.py  views.py
policy/: admin.py  api.py  apps.py  forms.py  models.py
product_portfolio/: admin.py  api.py  apps.py  filters.py  forms.py  importers.py  inlines.py  models.py  tasks.py  urls.py  views.py
purldb/: filters.py  urls.py  views.py
reporting/: admin.py  api.py  apps.py  fields.py  filters.py  forms.py  inlines.py  introspection.py  models.py  urls.py  utils.py  views.py
vulnerabilities/: api.py  apps.py  fetch.py  filters.py  forms.py  models.py  urls.py  views.py
workflow/: __init__.py  admin.py  api.py  apps.py  filters.py  forms.py  inlines.py  models.py  notification.py  urls.py  views.py
(+615 files in other folders)
