[metadata]
name = dejacode
version = 5.2.1
license = AGPL-3.0-only
description = Automate open source license compliance and ensure supply chain integrity
long_description = file:README.rst
author = nexB Inc.
author_email = info@aboutcode.org
url = https://github.com/aboutcode-org/dejacode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Utilities
keywords =
    open source
    scan
    license
    package
    dependency
    copyright
    filetype
    author
    extract
    licensing
    scancode
    scanpipe
    docker
    rootfs
    vm
    virtual machine
    pipeline
    code analysis
    container
license_files =
    LICENSE
    NOTICE

[options]
python_requires = >=3.12
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    # Base configuration tools
    setuptools==75.2.0
    wheel==0.44.0
    pip==24.2
    # Django
    Django==5.0.9
    asgiref==3.8.1
    typing_extensions==4.12.2
    sqlparse==0.5.0
    pytz==2024.1
    # Django apps
    django-crispy-forms==2.3
    crispy_bootstrap5==2024.10
    django-grappelli==4.0.1
    django-filter==24.3
    django-registration==3.4
    confusable_homoglyphs==3.3.1
    django-hcaptcha-field==1.4.0
    django-guardian==2.4.0
    django-environ==0.11.2
    django-debug-toolbar==4.4.6
    # REST API
    djangorestframework==3.15.2
    # API documentation, `coreapi` and its requirements:
    coreapi==2.3.3
    MarkupSafe==2.1.3
    coreschema==0.0.4
    itypes==1.2.0
    Jinja2==3.1.4
    uritemplate==4.1.1
    # Access log
    django-axes==5.35.0
    django-appconf==1.0.6
    django-ipware==5.0.2
    # Multi-factor authentication
    django-otp==1.5.4
    qrcode==7.4.2
    pypng==0.20220715.0
    # Database
    psycopg==3.2.3
    # Cache
    redis==5.2.0
    # redis dependencies:
    packaging==23.0
    pyparsing==3.0.9
    async-timeout==4.0.3
    deprecated==1.2.13
    wrapt==1.14.1
    # Antivirus
    clamd==1.0.2
    # Testing
    model_bakery==1.10.1
    # Task queue
    rq==2.0.0
    django-rq==3.0.0
    fakeredis==2.26.1
    # Scheduler
    rq-scheduler==0.14.0
    crontab==1.0.1
    freezegun==1.5.1
    # Libs
    certifi==2024.8.30
    urllib3==2.2.3
    python-dateutil==2.8.2
    python-mimeparse==1.6.0
    PyJWT==2.4.0
    natsort==8.4.0
    six==1.16.0
    requests==2.32.3
    idna==3.10
    charset-normalizer==3.4.0
    PyYAML==6.0.2
    Cython==3.0.11
    importlib_metadata==4.11.4
    zipp==3.20.2
    XlsxWriter==3.1.9
    # Markdown
    Markdown==3.3.7
    bleach==6.2.0
    bleach_allowlist==1.0.3
    webencodings==0.5.1
    # Authentication
    oauthlib==3.2.2
    python3-openid==3.2.0
    requests-oauthlib==2.0.0
    defusedxml==0.7.1
    # LDAP Auth
    python-ldap==3.4.3
    pyasn1==0.5.0
    pyasn1_modules==0.3.0
    django-auth-ldap==4.6.0
    # LDAP Testing
    mockldap==0.3.0.post1
    funcparserlib==0.3.6
    # license expressions
    boolean.py==4.0
    license_expression==30.4.0
    # Webhooks
    django-rest-hooks==1.6.1
    # django-notifications
    django_notifications_hq==1.8.3
    jsonfield==3.1.0
    django_model_utils==4.3.1
    swapper==1.3.0
    # AboutCode Toolkit
    aboutcode_toolkit==10.1.0
    click==8.1.3
    saneyaml==0.6.1
    openpyxl==3.1.5
    et-xmlfile==1.1.0
    # PackageURL
    packageurl-python==0.16.0
    # Gunicorn
    gunicorn==23.0.0
    # SPDX validation
    jsonschema==4.16.0
    attrs==23.2.0
    pyrsistent==0.18.1
    # CycloneDX
    cyclonedx-python-lib==8.5.0
    sortedcontainers==2.4.0
    toml==0.10.2
    py-serializable==1.1.2
    # Git
    gitpython==3.1.43
    gitdb==4.0.11
    smmap==5.0.1

[options.extras_require]
dev =
    # Linter and Validation
    ruff==0.5.2
    # Documentation
    doc8==0.11.2
    stevedore==5.1.0
    Pygments==2.16.1
    docutils==0.20.1
    restructuredtext-lint==1.4.0
    pbr==5.11.1
    # Parallel testing
    tblib==3.0.0

[options.entry_points]
console_scripts =
    dejacode = dejacode:command_line
