[metadata]
name = dejacode
version = 5.2.1
license = AGPL-3.0-only
description = Automate open source license compliance and ensure supply chain integrity
long_description = file:README.rst
author = nexB Inc.
author_email = info@aboutcode.org
url = https://github.com/aboutcode-org/dejacode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Utilities
keywords =
    open source
    scan
    license
    package
    dependency
    copyright
    filetype
    author
    extract
    licensing
    scancode
    scanpipe
    docker
    rootfs
    vm
    virtual machine
    pipeline
    code analysis
    container
license_files =
    LICENSE
    NOTICE

[options]
python_requires = >=3.12, <3.13
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    # Base configuration tools
    setuptools==75.8.0
    wheel==0.45.1
    pip==24.3.1
    # Django
    Django==5.1.6
    asgiref==3.8.1
    typing_extensions==4.12.2
    sqlparse==0.5.3
    # Django apps
    django-crispy-forms==2.3
    crispy_bootstrap5==2024.10
    django-grappelli==4.0.1
    django-filter==24.3
    django-registration==3.4
    confusable_homoglyphs==3.3.1
    django-hcaptcha-field==1.4.0
    django-guardian==2.4.0
    django-environ==0.12.0
    django-debug-toolbar==5.0.1
    # REST API
    djangorestframework==3.15.2
    # API documentation, `coreapi` and its requirements:
    coreapi==2.3.3
    MarkupSafe==3.0.2
    coreschema==0.0.4
    itypes==1.2.0
    Jinja2==3.1.5
    uritemplate==4.1.1
    # Access log
    django-axes==5.35.0
    django-appconf==1.0.6
    django-ipware==7.0.1
    # Multi-factor authentication
    django-otp==1.5.4
    qrcode==8.0
    pypng==0.20220715.0
    # Database
    psycopg==3.2.4
    # Cache
    redis==5.2.1
    # redis dependencies:
    packaging==24.2
    pyparsing==3.2.1
    async-timeout==5.0.1
    Deprecated==1.2.15
    wrapt==1.17.2
    # Antivirus
    clamd==1.0.2
    # Testing
    model_bakery==1.10.1
    # Task queue
    rq==2.1.0
    django-rq==3.0.0
    fakeredis==2.26.2
    # Scheduler
    rq-scheduler==0.14.0
    crontab==1.0.1
    freezegun==1.5.1
    # Libs
    certifi==2024.12.14
    urllib3==2.3.0
    python-dateutil==2.9.0.post0
    python-mimeparse==2.0.0
    PyJWT==2.10.1
    natsort==8.4.0
    six==1.17.0
    requests==2.32.3
    idna==3.10
    charset-normalizer==3.4.1
    PyYAML==6.0.2
    Cython==3.0.11
    importlib_metadata==8.6.1
    zipp==3.21.0
    XlsxWriter==3.2.1
    # Markdown
    Markdown==3.7
    bleach==6.2.0
    bleach_allowlist==1.0.3
    webencodings==0.5.1
    # Authentication
    oauthlib==3.2.2
    python3-openid==3.2.0
    requests-oauthlib==2.0.0
    defusedxml==0.7.1
    # LDAP Auth
    python-ldap==3.4.4
    pyasn1==0.6.1
    pyasn1-modules==0.4.1
    django-auth-ldap==5.1.0
    # LDAP Testing
    mockldap==0.3.0.post1
    funcparserlib==0.3.6
    # license expressions
    boolean.py==4.0
    license-expression==30.4.1
    # Webhooks
    django-rest-hooks==1.6.1
    # django-notifications
    django_notifications_patched==2.0.0
    jsonfield==3.1.0
    swapper==1.4.0
    # AboutCode Toolkit
    aboutcode_toolkit==11.0.0
    click==8.1.8
    saneyaml==0.6.1
    openpyxl==3.1.5
    et-xmlfile==2.0.0
    # PackageURL
    packageurl-python==0.16.0
    # Gunicorn
    gunicorn==23.0.0
    # SPDX validation
    jsonschema==4.23.0
    jsonschema-specifications==2024.10.1
    referencing==0.36.1
    rpds-py==0.22.3
    attrs==24.3.0
    pyrsistent==0.20.0
    # CycloneDX
    cyclonedx-python-lib==8.5.0
    sortedcontainers==2.4.0
    toml==0.10.2
    py-serializable==1.1.2
    # Git
    GitPython==3.1.44
    gitdb==4.0.12
    smmap==5.0.2
    # CSAF
    pydantic==2.10.6
    pydantic-core==2.27.2
    maturin==1.8.1
    setuptools-rust==1.10.2
    annotated-types==0.7.0
    semantic-version==2.10.0

[options.extras_require]
dev =
    # Linter and Validation
    ruff==0.9.3
    # Documentation
    doc8==1.1.2
    stevedore==5.4.0
    Pygments==2.19.1
    docutils==0.21.2
    restructuredtext-lint==1.4.0
    pbr==6.1.0
    # Parallel testing
    tblib==3.0.0

[options.entry_points]
console_scripts =
    dejacode = dejacode:command_line
